--- a/src/components/Card/styles/Card.css
+++ b/src/components/Card/styles/Card.css
@@ -1,7 +1,8 @@
 /** @format */
 
 .card {
-	width: 600px;
+	width: 100%;
+	max-width: 600px;
 	height: 450px;
 	overflow: hidden;
 	border-radius: 0.5rem;
@@ -29,10 +30,14 @@
 	background-color: var(--dark-cyan);
 }
 
-.card__thumb img {
+.card__thumb .card__thumb__desktop {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.card__thumb .card__thumb__mobile {
+	display: none;
 }
 
 .card__content {
@@ -51,6 +56,7 @@
 	line-height: 2.25rem; /* 36px */
 	font-weight: 700;
 	color: var(--very-dark-blue);
+
 }
 
 .card__content h2 {
@@ -108,4 +114,43 @@
 	-moz-border-radius: 0.5rem;
 	-ms-border-radius: 0.5rem;
 	-o-border-radius: 0.5rem;
+}
+
+.card__content button:hover {
+	background-color: var(--dark-cyan-hover);
+}
+
+@media (max-width: 576px) {
+	.card {
+		flex-direction: column;
+		height: auto;
+	}
+
+	.card__thumb,
+	.card__content {
+		width: 100%;
+	}
+
+	.card__content{
+		padding: 1.5rem;
+	}
+
+	.card__content h1 {
+		margin: 0.85rem 0;
+	}
+
+	.card__content h2 {
+		margin: 0.85rem 0;
+	}
+
+	.card__thumb .card__thumb__desktop {
+		display: none;
+	}
+
+	.card__thumb .card__thumb__mobile {
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
