--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 :root {
 	--dark-cyan: hsl(158, 36%, 37%);
+	--dark-cyan-hover: hsl(158, 36%, 20%);
 	--cream: hsl(30, 38%, 92%);
 	--very-dark-blue: hsl(212, 21%, 14%);
 	--dark-grayish-blue: hsl(228, 12%, 48%);
@@ -43,7 +44,7 @@ main {
 	width: 100%;
 	max-width: 1440px;
 	height: 100%;
-	padding: 0 1.25rem; /* 20px */
+	padding: 1.85rem 1.25rem; /* 20px */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
